--- a/www/util/random.html
+++ b/www/util/random.html
@@ -33,16 +33,16 @@ noindex: true
 <script type="text/javascript">
 
     // from https://www.frankmitchell.org/2015/01/fisher-yates/
-    function shuffle (array) {
-        var i = 0
-            , j = 0
-            , temp = null
+    function shuffle(array) {
+        var i = 0;
+        var j = 0;
+        var temp = null;
 
         for (i = array.length - 1; i > 0; i -= 1) {
-            j = Math.floor(Math.random() * (i + 1))
-            temp = array[i]
-            array[i] = array[j]
-            array[j] = temp
+            j = Math.floor(Math.random() * (i + 1));
+            temp = array[i];
+            array[i] = array[j];
+            array[j] = temp;
         }
     }
 
