--- a/www/search-github.html
+++ b/www/search-github.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Search Logos
+title: Search Github
 ---
 
 <div class="row clearfix" style="padding-bottom:20px;">
@@ -9,7 +9,7 @@ title: Search Logos
             <div class="form-group">
                  <label class="sr-only" for="q">Search query</label><input autocomplete="off" autofocus="autofocus" class="form-control" id="q" name="q" placeholder="Search terms" type="text">
             </div>
-		<button type="submit" class="btn btn-primary">Search</button>
+		<button type="submit" class="btn btn-primary">Search Github</button>
         </form>
     </div>
 </div>
@@ -19,10 +19,13 @@ title: Search Logos
 	<div class="logo-container" id="search_results"></div>
 </div>
 
-<div class="row clearfix">
-    <p id="pending-tip" style="display:none;">The following logos are on the &quot;To Do&quot; list and should be ready shortly.</p>
-    <ul id="pending"></ul>
-</div>
+<style>
+    .github-logo {
+        max-width: 120px;
+        max-height: 60px;
+        margin: 10px;
+    }
+</style>
 
 <script src="/js/lunr.min.js"></script>
 <script type="text/javascript">
@@ -31,19 +34,18 @@ $(function() {
 	// a boost of 10 to indicate matches on this field are more important.
 	lunr.tokenizer.seperator = /[\s\-_\.]+/
 	window.idx = lunr(function () {
-			this.field('id');
-			this.field('title', { boost: 10 });
-			this.field('website');
-			this.field('category');
+            this.field('id');
+			this.field('name');
 		});
 	window.idx.pipeline.remove(lunr.stopWordFilter);
 
 	// Download the data from the JSON file we generated
-	window.data = $.getJSON('/util/fulltext.json');
+	window.data = $.getJSON('https://github-logos.vectorlogo.zone/searchdata.json');
 
 	// Wait for the data to load and add it to lunr
 	window.data.then(function(loaded_data){
 		$.each(loaded_data, function(index, value){
+		    console.log("Indexing " + JSON.stringify(value));
 			window.idx.add($.extend({ "id": index }, value));
 		});
 		console.log("data loaded");
@@ -96,14 +98,15 @@ $(function() {
 		}
 	});
 
-	function getParameterByName(name) {
-		var match = RegExp('[?&]' + name + '=([^&]*)').exec(window.location.search);
-		return match && decodeURIComponent(match[1].replace(/\+/g, ' '));
-	}
-
     function htmlEncode(value){
         return $("<div>").text(value).html();
     }
+
+
+    function getParameterByName(name) {
+		var match = RegExp('[?&]' + name + '=([^&]*)').exec(window.location.search);
+		return match && decodeURIComponent(match[1].replace(/\+/g, ' '));
+	}
 
 	var query = getParameterByName("q");
 	if (query && query.length)
@@ -118,8 +121,6 @@ $(function() {
 
 	function display_search_results(query, results) {
 		var $search_results = $("#search_results");
-		var $pending = $("#pending");
-		$pending.empty();
 
 		// Wait for data to load
 		window.data.then(function(loaded_data) {
@@ -137,22 +138,19 @@ $(function() {
 				results.forEach(function(result) {
 						var item = loaded_data[result.ref];
 
-						if (item.haslogo) {
-                            // Build a snippet of HTML for this result
-                            var appendString = '<a href="/logos/' + result.ref + '/index.html"><img title="' + item.title + '" src="/logos/' + result.ref + '/' + result.ref + '-ar21.svg" /></a></li>';
+                        // Build a snippet of HTML for this result
+                        var appendString = '<a href="' + item.src + '">'
+                            + '<img class="github-logo" title="' + item.name + '" src="https://github-logos.vectorlogo.zone' + item.img + '" />'
+                            + '</a> ';
 
-                            // Add it to the results
-                            $search_results.append(appendString);
-                        }
-                        else {
-						    $pending.append($("<li>").append($("<a>").text(item.title).attr("href", "/logos/" + result.ref + "/index.html")));
-                        }
+
+                        // Add it to the results
+                        $search_results.append(appendString);
 					});
-                $("#pending-tip").css("display", $pending.children().length > 0 ? "block" : "none");
-			} 
+			}
 			else 
 			{
-				$search_results.html('<div class="alert alert-warning">No results found for "' + htmlEncode(query) + '".  Maybe try the <a href="/search-github.html?q=' + encodeURIComponent(query) + '">GitHub Logo Search</a>.</div>');
+				$search_results.html('<div class="alert alert-warning">No results found for "' + htmlEncode(query) + '"</div>');
 			}
 		});
 	}
