--- a/www/search.html
+++ b/www/search.html
@@ -2,7 +2,7 @@
 layout: default
 title: Search Logos
 ---
-
+{% include searchtab.html %}
 <div class="row clearfix" style="padding-bottom:20px;">
     <div class="col-md-6 col-md-offset-3 column">
         <form action="get" class="form-inline" id="site_search">
