search competitor's sites

--- a/www/search.html
+++ b/www/search.html
@@ -152,7 +152,7 @@ $(function() {
 			} 
 			else 
 			{
-				$search_results.html('<div class="alert alert-warning">No results found for "' + htmlEncode(query) + '".  Maybe try the <a href="/search-github.html?q=' + encodeURIComponent(query) + '">GitHub Logo Search</a>.</div>');
+				$search_results.html('<div class="alert alert-warning">No results found for "' + htmlEncode(query) + '".</div>');
 			}
 		});
 	}
