html validation cleanup

--- a/www/search-github.html
+++ b/www/search-github.html
@@ -28,7 +28,7 @@ title: Search Github
 </style>
 
 <script src="/js/lunr.min.js"></script>
-<script type="text/javascript">
+<script>
 $(function() {
 	// Initalize lunr with the fields it will be searching on. I've given title
 	// a boost of 10 to indicate matches on this field are more important.
