--- a/www/support/contact.html
+++ b/www/support/contact.html
@@ -1,8 +1,8 @@
 ---
 title: Contact
 ---
-<script type="text/javascript">var host = (("https:" == document.location.protocol) ? "https://secure." : "http://");document.write(unescape("%3Cscript src='" + host + "wufoo.com/scripts/embed/form.js' type='text/javascript'%3E%3C/script%3E"));</script>
-<script type="text/javascript">
+<script>var host = (("https:" == document.location.protocol) ? "https://secure." : "http://");document.write(unescape("%3Cscript src='" + host + "wufoo.com/scripts/embed/form.js' type='text/javascript'%3E%3C/script%3E"));</script>
+<script>
 var z7x3k7 = new WufooForm();
 z7x3k7.initialize({
 'defaultValues':'field14=HackerLogos',
