--- a/www/util/preview.html
+++ b/www/util/preview.html
@@ -67,7 +67,7 @@ layout: none
 		<img id="preview-image" src="/images/preview/loading.gif" crossorigin="anonymous" />
 	</div><!--/container-->
 {% include google-analytics.html %}
-<script type="text/javascript">
+<script>
 	function qsParam(key) {
 	    key = key.replace(/[*+?^$.\[\]{}()|\\\/]/g, "\\$&"); // escape RegEx meta chars
 	    var match = location.search.match(new RegExp("[?&]"+key+"=([^&]+)(&|$)"));
