--- a/www/util/random.html
+++ b/www/util/random.html
@@ -30,7 +30,7 @@ noindex: true
 </div><!--/container-->
 {% include google-analytics.html %}
 {% assign sorted_pages = site.pages | sort:'sort' %}
-<script type="text/javascript">
+<script>
 
     // from https://www.frankmitchell.org/2015/01/fisher-yates/
     function shuffle(array) {
