--- a/www/search.html
+++ b/www/search.html
@@ -25,7 +25,7 @@ title: Search Logos
 </div>
 
 <script src="/js/lunr.min.js"></script>
-<script type="text/javascript">
+<script>
 $(function() {
 	// Initalize lunr with the fields it will be searching on. I've given title
 	// a boost of 10 to indicate matches on this field are more important.
