updated Wufoo contact form (to fix with https)

--- a/www/support/contact.html
+++ b/www/support/contact.html
@@ -1,16 +1,26 @@
 ---
 title: Contact
 ---
-<script>var host = (("https:" == document.location.protocol) ? "https://secure." : "http://");document.write(unescape("%3Cscript src='" + host + "wufoo.com/scripts/embed/form.js' type='text/javascript'%3E%3C/script%3E"));</script>
-<script>
-var z7x3k7 = new WufooForm();
-z7x3k7.initialize({
-'defaultValues':'field14=HackerLogos',
-'userName':'fileformat',
-'formHash':'z7x3k7',
-'autoResize':true,
-'height':'617',
-'header':'show'});
-z7x3k7.display();
-</script>
+<div id="wufoo-z5yinul1mj3me9">
+    Fill out my <a href="https://fileformat.wufoo.com/forms/z5yinul1mj3me9">online form</a>.
+</div>
+<div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">Use <a href="http://www.wufoo.com/partners/">Wufoo integrations</a> and get your data to your favorite apps.</div>
+<script type="text/javascript">var z5yinul1mj3me9;(function(d, t) {
+    var s = d.createElement(t), options = {
+        'defaultValues':'field14=VectorLogoZone',
+        'userName':'fileformat',
+        'formHash':'z5yinul1mj3me9',
+        'autoResize':true,
+        'height':'737',
+        'async':true,
+        'host':'wufoo.com',
+        'header':'show',
+        'ssl':true};
+    s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+    s.onload = s.onreadystatechange = function() {
+        var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+        try { z5yinul1mj3me9 = new WufooForm();z5yinul1mj3me9.initialize(options);z5yinul1mj3me9.display(); } catch (e) {}};
+    var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+})(document, 'script');</script>
+
 
