--- a/www/support/guidelines.html
+++ b/www/support/guidelines.html
@@ -70,7 +70,7 @@ directory and logo handle should be <code>getbootstrap</code>.</p>
 
 <p>If the font has strange proportions (or is too light or dark), the size can be adjusted so it is visually similar to the guidelines.</p>
 
-<p class="text-center"><a href="/util/preview.html?image=/template/64point.svg&amp;next={{page.url}}%23template"><img alt="template for horizontal and wordmark" src="/template/64point.svg" style="border:1px solid black" /></a></p>
+<p class="text-center"><a href="/util/preview.html?image=/template/64point.svg&amp;next=/{{page.path}}%23template"><img alt="template for horizontal and wordmark" src="/template/64point.svg" style="border:1px solid black" /></a></p>
 
 <h2>Metadata</h2>
 
