--- a/www/util/tile-vs-supertiny.html
+++ b/www/util/tile-vs-supertiny.html
@@ -23,7 +23,7 @@ noindex: true
         <tr>
             <td><img alt="tile of {{logopage.title}}" src="/logos/{{logopage.logohandle}}/{{tilefile}}" style="height: 128px; width: 128px; padding: 10px;" /></td>
             <td><img alt="icon of {{logopage.title}}" src="https://github-logos.vectorlogo.zone/super-tiny-icons/{{sti_file}}.svg" style="height: 128px; width: 128px; padding: 10px;" /></td>
-            <td><a href="{{logopage.url}}">{{logopage.title}}</a></td>
+            <td><a href="{{logopage.url}}{{site.indexpage}}">{{logopage.title}}</a></td>
         </tr>
         {% endif %}{% endif %}{% endfor %}
         </tbody>
