--- a/www/util/tile-vs-supertiny.html
+++ b/www/util/tile-vs-supertiny.html
@@ -35,6 +35,21 @@ noindex: true
 
 {% assign sorted_pages = site.pages | sort:'sort' %}
 <div>
+    Overlay image:
+    <button class="btn" id="btn-none">none</button>
+    <button class="btn" id="btn-yellow">yellow</button>
+    <button class="btn" id="btn-red">red</button>
+    <button class="btn" id="btn-black">black</button>
+    <button class="btn" id="btn-hollow">lines</button>
+</div>
+<div>
+    Overlay opacity:
+    <button class="btn" id="btn-opacity10">10%</button>
+    <button class="btn" id="btn-opacity25">25%</button>
+    <button class="btn" id="btn-opacity50">50%</button>
+    <button class="btn" id="btn-opacity100">100%</button>
+</div>
+<div>
     <table class="table table-bordered" style="width:inherit;">
         <thead>
         <tr>
@@ -69,3 +84,36 @@ noindex: true
         </tbody>
     </table>
 </div>
+<script>
+    $(document).ready(function() {
+        $("#btn-none").click(function() {
+            $(".img-overlay").attr("src", "tile-none.svg").css("width", "128px").css("height", "128px");
+        });
+        $("#btn-yellow").click(function() {
+            $(".img-overlay").attr("src", "tile-yellow.svg").css("width", "128px").css("height", "128px");
+        });
+        $("#btn-red").click(function() {
+            $(".img-overlay").attr("src", "tile-red.svg").css("width", "128px").css("height", "128px");
+        });
+        $("#btn-black").click(function() {
+            $(".img-overlay").attr("src", "tile-black.svg").css("width", "128px").css("height", "128px");
+        });
+        $("#btn-hollow").click(function() {
+            $(".img-overlay").attr("src", "tile-hollow.svg").css("width", "128px").css("height", "128px");
+        });
+        $("#btn-opacity10").click(function() {
+            $(".img-overlay").css("opacity", "0.1");
+        });
+        $("#btn-opacity25").click(function() {
+            $(".img-overlay").css("opacity", "0.25");
+        });
+        $("#btn-opacity50").click(function() {
+            $(".img-overlay").css("opacity", "0.5");
+        });
+        $("#btn-opacity100").click(function() {
+            $(".img-overlay").css("opacity", "1.0");
+        });
+    });
+
+
+</script>
