move reports to their own directory

--- a/www/report/inventory.html
+++ b/www/report/inventory.html
@@ -1,6 +1,8 @@
 ---
 title: Logo Inventory
 layout: default
+noindex: true
+redirect_from: /logos/inventory.html
 ---
 {% assign sorted_pages = site.pages | sort:'sort' %}
 {% capture checkon %}<i class="fa fa-check"></i>{% endcapture %}
