--- a/www/report/missing.html
+++ b/www/report/missing.html
@@ -2,6 +2,7 @@
 title: Missing Logos
 layout: default
 noindex: true
+redirect_from: /logos/missing.html
 ---
 <p>In theory, every logo should have at least the icon and rectangular versions.  This is the list of logos that don't have both.</p>
 
