--- a/www/report/metadata.html
+++ b/www/report/metadata.html
@@ -1,6 +1,8 @@
 ---
 title: Available Metadata
 layout: default
+noindex: true
+redirect_from: /logos/metadata.html
 ---
 <p>I try to include links to the various websites for each logo.  This is a report of those links</p>
 
@@ -9,6 +11,7 @@ layout: default
 {% capture checkoff %}<i class="fa fa-fw"></i>{% endcapture %}
 {% assign logocount = 0 %}
 {% assign blogcount = 0 %}
+{% assign colorcount = 0 %}
 {% assign facebookcount = 0 %}
 {% assign fontcount = 0 %}
 {% assign githubcount = 0 %}
@@ -20,9 +23,9 @@ layout: default
 <table class="table table-striped table-bordered">
 	<thead>
 		<tr>
-			<!--<th>ID</th>-->
 			<th>Name</th>
-			<th style="text-align:center">Blog</th>
+            <th style="text-align:center">Blog</th>
+            <th style="text-align:center">Color</th>
 			<th style="text-align:center">Facebook</th>
             <th style="text-align:center">Font</th>
 			<th style="text-align:center">Github</th>
@@ -34,13 +37,15 @@ layout: default
 	</thead>
 	<tbody>{% for logopage in sorted_pages %}{% if logopage.logohandle %}{% assign logocount = logocount | plus:1 %}{% assign count = logopage.images.size %}
 		<tr>
-			<!--<td>[{{ logopage.logohandle }}]</td>-->
 			<td><a href="{{logopage.url}}{{site.indexpage}}">{{logopage.title}}</a></td>
+            <td class="text-center">
+                {% if logopage.blog %}<a href="{{logopage.blog}}">{{ checkon }}{% assign blogcount = blogcount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
+            </td>
+            <td class="text-center">
+                {% if logopage.colors %}{{ checkon }}{% assign colorcount = colorcount | plus:1 %}{% else %}{{ checkoff }}{% endif %}
+            </td>
 			<td class="text-center">
-				{% if logopage.blog %}<a href="{{logopage.blog}}">{{ checkon }}{% assign blogcount = blogcount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
-			</td>
-			<td class="text-center">
-				    {% if logopage.facebook %}<a href="{{logopage.facebook}}">{{ checkon }}{% assign facebookcount = facebookcount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
+				{% if logopage.facebook %}<a href="{{logopage.facebook}}">{{ checkon }}{% assign facebookcount = facebookcount | plus:1 %}</a>{% else %}{{ checkoff }}{% endif %}
 			</td>
             <td class="text-center">
                 {% if logopage.font %}{{ checkon }}{% assign fontcount = fontcount | plus:1 %}{% else %}{{ checkoff }}{% endif %}
@@ -63,9 +68,9 @@ layout: default
 		</tr>
 {% endif %}{% endfor %}
     <tr>
-        <!--<td>[{{ logopage.logohandle }}]</td>-->
         <td>&nbsp;</td>
         <td class="text-center">{{blogcount}} ({{ blogcount | times:100 | divided_by: logocount}}%)</td>
+        <td class="text-center">{{colorcount}} ({{ colorcount | times:100 | divided_by: logocount}}%)</td>
         <td class="text-center">{{facebookcount}} ({{ facebookcount | times:100 | divided_by: logocount}}%)</td>
         <td class="text-center">{{fontcount}} ({{ fontcount | times:100 | divided_by: logocount}}%)</td>
         <td class="text-center">{{githubcount}} ({{ githubcount | times:100 | divided_by: logocount}}%)</td>
@@ -75,9 +80,9 @@ layout: default
         <td class="text-center">{{wikipediacount}} ({{ wikipediacount | times:100 | divided_by: logocount}}%)</td>
     </tr>
     <tr>
-        <!--<th>ID</th>-->
         <th>&nbsp;</th>
         <th style="text-align:center">Blog</th>
+        <th style="text-align:center">Color</th>
         <th style="text-align:center">Facebook</th>
         <th style="text-align:center">Font</th>
         <th style="text-align:center">Github</th>
