--- a/www/report/inventory.html
+++ b/www/report/inventory.html
@@ -4,19 +4,19 @@ layout: default
 noindex: true
 redirect_from: /logos/inventory.html
 ---
-{% assign sorted_pages = site.pages | sort:'sort' %}
-{% capture checkon %}<i class="fa fa-check"></i>{% endcapture %}
-{% capture checkoff %}<i class="fa fa-fw"></i>{% endcapture %}
-{% assign logocount = 0 %}
+{%- assign sorted_pages = site.pages | sort:'sort' -%}
+{%- capture checkon %}<i class="fa fa-check"></i>{% endcapture -%}
+{%- capture checkoff %}<i class="fa fa-fw"></i>{% endcapture -%}
+{%- assign logocount = 0 -%}
 
 <table class="table table-striped table-bordered">
 	<thead>
 		<tr>
 			<!--<th>ID</th>-->
 			<th>Name</th>
-{% for imagetype in site.data.imagetype %}
+{%- for imagetype in site.data.imagetype %}{% if imagetype.inventory -%}
 			<th><a href="visual.html#{{imagetype.id}}">{{ imagetype.title }}</a></th>
-{% endfor %}
+{%- endif %}{% endfor -%}
 			<th>Other</th>
 		</tr>
 	</thead>
@@ -24,28 +24,28 @@ redirect_from: /logos/inventory.html
 		<tr>
 			<!--<td>[{{ logopage.logohandle }}]</td>-->
 			<td><a href="{{logopage.url}}{{site.indexpage}}">{{logopage.title}}</a></td>
-{% for imagetype in site.data.imagetype %}
+{%- for imagetype in site.data.imagetype %}{% if imagetype.inventory -%}
 			<td class="text-center">
 				    {% capture logofile %}{{ logopage.logohandle }}-{{imagetype.id}}.svg{% endcapture %}{% if logopage.images contains logofile %}{{ checkon }}{% assign count = count | minus:1 %}{% else %}{{ checkoff }}{% endif %}
 				<!-- / {% capture logofile %}{{ logopage.logohandle }}-{{imagetype.rastersuffix}}.png{% endcapture %}{% if logopage.images contains logofile %}{{ checkon }}{% assign count = count | minus:1 %}{% else %}{{ checkoff }}{% endif %}-->
 			</td>
-{% endfor %}
+{%- endif %}{% endfor -%}
 			<td class="text-center">
 				{{ count }}
 			</td>
 		</tr>
-{% endif %}{% endfor %}
+{%- endif %}{% endfor -%}
 	</tbody>
     <tfoot>
         <tr>
             <td style="text-align:right;">Total:</td>
-            {% for imagetype in site.data.imagetype %}
-                {% assign typecount = 0 %}
-                {% for logopage in sorted_pages %}{% if logopage.logohandle %}
+            {%- for imagetype in site.data.imagetype -%}
+                {%- assign typecount = 0 -%}
+                {%- for logopage in sorted_pages %}{% if logopage.logohandle -%}
                     {% capture logofile %}{{ logopage.logohandle }}-{{imagetype.id}}.svg{% endcapture %}{% if logopage.images contains logofile %}{% assign typecount = typecount | plus:1 %}{% endif %}
-                {% endif %}{% endfor %}
+                {%- endif %}{% endfor -%}
                 <td style="text-align:center;">{{typecount}}</td>
-            {% endfor %}
+            {%- endfor -%}
             <td>&nbsp;</td>
         </tr>
     </tfoot>
